@@ -5,14 +5,11 @@
 # https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
 # Release       Puppet   Ruby   EOL
-# SIMP 6.1      4.10.6   2.1.9  TBD
-# SIMP 6.2      4.10.12  2.1.9  TBD
-# SIMP 6.3      5.5.7    2.4.4  TBD***
-# PE 2018.1     5.5.8    2.4.4  2020-05 (LTS)***
+# SIMP 6.3      5.5.10   2.4.5  TBD***
+# PE 2018.1.7   5.5.10   2.4.5  2020-05 (LTS)***
 # PE 2019.0     6.0      2.5.1  2019-08-31^^^
 #
 # *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
-# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
 ---
 stages:
   - 'sanity'
@@ -65,39 +62,19 @@ variables:
 # Puppet Versions
 #-----------------------------------------------------------------------
 
-.pup_4: &pup_4
-  image: 'ruby:2.1'
+.pup_5_5_10: &pup_5_5_10
+  image: 'ruby:2.4.5'
   variables:
-    PUPPET_VERSION: '~> 4.0'
-    MATRIX_RUBY_VERSION: '2.1'
-
-.pup_4_10: &pup_4_10
-  image: 'ruby:2.1'
-  variables:
-    PUPPET_VERSION: '~> 4.10.4'
-    MATRIX_RUBY_VERSION: '2.1'
-
-.pup_5: &pup_5
-  image: 'ruby:2.4'
-  variables:
-    PUPPET_VERSION: '~> 5.0'
+    PUPPET_VERSION: '5.5.10'
     BEAKER_PUPPET_COLLECTION: 'puppet5'
-    MATRIX_RUBY_VERSION: '2.4'
-
-.pup_5_5_7: &pup_5_5_7
-  image: 'ruby:2.4'
-  variables:
-    PUPPET_VERSION: '5.5.7'
-    BEAKER_PUPPET_COLLECTION: 'puppet5'
-    MATRIX_RUBY_VERSION: '2.4'
+    MATRIX_RUBY_VERSION: '2.4.5'
 
 .pup_6: &pup_6
-  allow_failure: true
-  image: 'ruby:2.5'
+  image: 'ruby:2.5.1'
   variables:
     PUPPET_VERSION: '~> 6.0'
     BEAKER_PUPPET_COLLECTION: 'puppet6'
-    MATRIX_RUBY_VERSION: '2.5'
+    MATRIX_RUBY_VERSION: '2.5.1'
 
 
 # Testing Environments
@@ -129,7 +106,6 @@ variables:
   tags: ['beaker']
   <<: *setup_bundler_env
 
-
 # Pipeline / testing matrix
 #=======================================================================
 
@@ -151,10 +127,6 @@ sanity_checks:
 # Linting
 #-----------------------------------------------------------------------
 
-pup4-lint:
-  <<: *pup_4
-  <<: *lint_tests
-
 pup5-lint:
   <<: *pup_5
   <<: *lint_tests
@@ -166,67 +138,49 @@ pup6-lint:
 # Unit Tests
 #-----------------------------------------------------------------------
 
-pup5-unit:
-  <<: *pup_5
-  <<: *unit_tests
-
-pup5.5.7-unit:
-  <<: *pup_5_5_7
-  <<: *unit_tests
-
-pup4.10-unit:
-  <<: *pup_4_10
+pup5.5.10-unit:
+  <<: *pup_5_5_10
   <<: *unit_tests
 
 pup6-unit:
   <<: *pup_6
   <<: *unit_tests
 
-# Acceptance Tests
+# Acceptance tests
 # ==============================================================================
-pup4.10:
-  <<: *pup_4_10
+pup5.5.10:
+  <<: *pup_5_5_10
   <<: *acceptance_base
   script:
     - 'bundle exec rake beaker:suites'
 
-# # FIPS is not supported by gitlab yet
-# pup4.10-fips:
-#   <<: *pup_4_10
-#   <<: *acceptance_base
-#   <<: *only_with_SIMP_FULL_MATRIX
-#   script:
-#     - 'BEAKER_fips=yes bundle exec rake beaker:suites'
+pup5.5.10-fips:
+  <<: *pup_5_5_10
+  <<: *acceptance_base
+  script:
+    - 'BEAKER_fips=yes bundle exec rake beaker:suites'
 
-pup5.5.7:
-  <<: *pup_5_5_7
+pup5.5.10-oel-combined-x64:
+  <<: *pup_5_5_10
+  <<: *acceptance_base
+  script:
+    - 'bundle exec rake beaker:suites[default,oel-combined-x64]'
+
+pup5.5.10-oel-combined-x64-fips:
+  <<: *pup_5_5_10
+  <<: *acceptance_base
+  <<: *only_with_SIMP_FULL_MATRIX
+  script:
+    - 'BEAKER_fips=yes bundle exec rake beaker:suites[default,oel-combined-x64]'
+
+pup6:
+  <<: *pup_6
   <<: *acceptance_base
   script:
     - 'bundle exec rake beaker:suites'
 
-# # FIPS is not supported by gitlab yet
-# pup5.5.7-fips:
-#   <<: *pup_5_5_7
-#   <<: *acceptance_base
-#   script:
-#     - 'BEAKER_fips=yes bundle exec rake beaker:suites'
-
-pup5.5.7-oel:
-  <<: *pup_5_5_7
+pup6-fips:
+  <<: *pup_6
   <<: *acceptance_base
   script:
-    - 'bundle exec rake beaker:suites[default,oel]'
-
-# # FIPS is not supported by gitlab yet
-# pup5.5.7-oel-fips:
-#   <<: *pup_5_5_7
-#   <<: *acceptance_base
-#   <<: *only_with_SIMP_FULL_MATRIX
-#   script:
-#     - 'BEAKER_fips=yes bundle exec rake beaker:suites[default,oel]'
-#
-# pup5.5.7-compliance-fips:
-#   <<: *pup_5_5_7
-#   <<: *compliance_tests
-#   script:
-#     - 'BEAKER_fips=yes bundle exec rake beaker:suites[compliance]'
+    - 'BEAKER_fips=yes bundle exec rake beaker:suites'
