@@ -1,3 +1,6 @@
+* Tue Apr 23 2019 Joseph Sharkey <shark.bruhaha@gmail.com> - 0.4.1-0
+- Updated .travis.yml, .gitlab-ci.yml, .ruby-version
+
 * Thu Mar 07 2019 Liz Nemsick <lnemsick.simp@gmail.com> - 0.4.0-0
 - Added missing simp-pki dependency to metadata.json
 - Use ``generate_pem_hash_links`` option of pki_cert_sync to allow
